# SpecPiNK

./: .gitignore  .readthedocs.yaml  README.md  calibrator.py  lisa.py  main.py  pipeline.py  pyproject.toml  reducer.py  reduction.py  requirements.txt  utils.py
Data/additional/: guiding01.fits
Data/reduced/: lisa_lisa.ord_default.npz  lisa_lisa.thar_master.fits
docs/source/: calibrator.rst  conf.py  index.rst  main.rst  modules.rst  pipeline.rst  reducer.rst  spectrum.rst  stacker.rst  utils.rst
specpink/: NeArgReferenceData.txt  calibrator.py  example.py  main.py  pipeline.py  reducer.py  spectrum.py  stacker.py  utils.py
